Automatically backed up by Learn

--- a/my_list.html
+++ b/my_list.html
@@ -1,7 +1,10 @@
-hi
-does
-this
-count
-as
-a
-list
+<h1> hi </h1>
+<p> Just checking </p>
+<ul>
+<li> does </li>
+<li> this </li>
+<li> count </li>
+<li> as </li>
+<li> a </li>
+<li> list </li>
+</ul>
